--- a/forms/udocumenteditform.lfm
+++ b/forms/udocumenteditform.lfm
@@ -1,12 +1,11 @@
 object DocumentEditForm: TDocumentEditForm
   Left = 513
-  Height = 361
+  Height = 289
   Top = 250
-  Width = 970
-  Caption = 'Редактирование'
-  ClientHeight = 361
-  ClientWidth = 970
-  DesignTimePPI = 120
+  Width = 776
+  Caption = 'Редактирование документа'
+  ClientHeight = 289
+  ClientWidth = 776
   OnCreate = FormCreate
   OnShow = FormShow
   LCLVersion = '3.2.0.0'
@@ -14,19 +13,19 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Control = OpenButton
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 49
-    Top = 306
-    Width = 966
+    Height = 41
+    Top = 243
+    Width = 772
     Align = alBottom
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Left = 2
-    BorderSpacing.Top = 20
+    BorderSpacing.Top = 16
     BorderSpacing.Right = 2
-    BorderSpacing.Bottom = 6
+    BorderSpacing.Bottom = 5
     BevelOuter = bvNone
-    ClientHeight = 49
-    ClientWidth = 966
+    ClientHeight = 41
+    ClientWidth = 772
     TabOrder = 0
     object CancelButton: TSpeedButton
       AnchorSideTop.Control = ButtonPanelBevel
@@ -34,13 +33,13 @@ object DocumentEditForm: TDocumentEditForm
       AnchorSideRight.Control = ButtonPanel
       AnchorSideRight.Side = asrBottom
       Cursor = crHandPoint
-      Left = 845
+      Left = 668
       Height = 34
-      Top = 8
-      Width = 115
+      Top = 6
+      Width = 99
       Anchors = [akTop, akRight]
       AutoSize = True
-      BorderSpacing.Right = 6
+      BorderSpacing.Right = 5
       Caption = ' Отменить '
       Images = Images.PX24
       ImageIndex = 7
@@ -54,10 +53,10 @@ object DocumentEditForm: TDocumentEditForm
       AnchorSideTop.Side = asrCenter
       AnchorSideRight.Control = CancelButton
       Cursor = crHandPoint
-      Left = 724
+      Left = 564
       Height = 34
-      Top = 8
-      Width = 121
+      Top = 6
+      Width = 104
       Anchors = [akTop, akRight]
       AutoSize = True
       Caption = ' Сохранить '
@@ -70,9 +69,9 @@ object DocumentEditForm: TDocumentEditForm
     end
     object ButtonPanelBevel: TBevel
       Left = 0
-      Height = 8
+      Height = 6
       Top = 0
-      Width = 966
+      Width = 772
       Align = alTop
       Shape = bsTopLine
     end
@@ -81,11 +80,11 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = DocTypeComboBox
     AnchorSideTop.Side = asrCenter
-    Left = 8
-    Height = 20
-    Top = 42
-    Width = 24
-    BorderSpacing.Left = 8
+    Left = 6
+    Height = 15
+    Top = 33
+    Width = 19
+    BorderSpacing.Left = 6
     Caption = 'тип'
     ParentColor = False
   end
@@ -96,17 +95,17 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 119
-    Height = 28
-    Top = 38
-    Width = 843
+    Left = 92
+    Height = 23
+    Top = 29
+    Width = 678
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 8
-    BorderSpacing.Right = 8
-    Constraints.MinWidth = 188
+    BorderSpacing.Left = 5
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 6
+    Constraints.MinWidth = 150
     DropDownCount = 20
-    ItemHeight = 20
+    ItemHeight = 15
     Style = csDropDownList
     TabOrder = 1
   end
@@ -115,23 +114,23 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocTypeComboBox
     AnchorSideTop.Side = asrBottom
-    Left = 119
-    Height = 28
-    Top = 74
-    Width = 150
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 8
+    Left = 92
+    Height = 23
+    Top = 58
+    Width = 120
+    BorderSpacing.Left = 5
+    BorderSpacing.Top = 6
     TabOrder = 2
   end
   object DocNumLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 8
-    Height = 20
-    Top = 78
-    Width = 85
-    BorderSpacing.Left = 8
+    Left = 6
+    Height = 15
+    Top = 62
+    Width = 66
+    BorderSpacing.Left = 6
     Caption = 'номер – год'
     ParentColor = False
   end
@@ -140,11 +139,11 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 275
-    Height = 20
-    Top = 78
-    Width = 8
-    BorderSpacing.Left = 6
+    Left = 217
+    Height = 15
+    Top = 62
+    Width = 6
+    BorderSpacing.Left = 5
     Caption = '–'
     ParentColor = False
   end
@@ -153,12 +152,12 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocTypeComboBox
     AnchorSideTop.Side = asrBottom
-    Left = 289
-    Height = 28
-    Top = 74
-    Width = 100
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 8
+    Left = 228
+    Height = 23
+    Top = 58
+    Width = 80
+    BorderSpacing.Left = 5
+    BorderSpacing.Top = 6
     TabOrder = 3
   end
   object DocDateLabel: TLabel
@@ -166,11 +165,11 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 409
-    Height = 20
-    Top = 78
-    Width = 179
-    BorderSpacing.Left = 20
+    Left = 324
+    Height = 15
+    Top = 62
+    Width = 137
+    BorderSpacing.Left = 16
     Caption = 'дата введения в действие'
     ParentColor = False
   end
@@ -180,17 +179,17 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Side = asrBottom
-    Left = 594
-    Height = 28
-    Top = 74
-    Width = 100
+    Left = 466
+    Height = 23
+    Top = 58
+    Width = 79
     CenturyFrom = 1941
     MaxDate = 401768
     MinDate = -53780
     ParentFont = False
     TabOrder = 4
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 4
+    BorderSpacing.Left = 5
+    BorderSpacing.Top = 3
     TrailingSeparator = False
     TextForNullDate = 'NULL'
     LeadingZeros = True
@@ -211,11 +210,11 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 714
-    Height = 20
-    Top = 78
-    Width = 41
-    BorderSpacing.Left = 20
+    Left = 561
+    Height = 15
+    Top = 62
+    Width = 34
+    BorderSpacing.Left = 16
     Caption = 'статус'
     ParentColor = False
   end
@@ -226,17 +225,17 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 761
-    Height = 28
-    Top = 74
-    Width = 201
+    Left = 600
+    Height = 23
+    Top = 58
+    Width = 170
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 8
-    BorderSpacing.Right = 8
-    Constraints.MinWidth = 188
+    BorderSpacing.Left = 5
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 6
+    Constraints.MinWidth = 150
     DropDownCount = 20
-    ItemHeight = 20
+    ItemHeight = 15
     Style = csDropDownList
     TabOrder = 5
   end
@@ -247,25 +246,25 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 119
-    Height = 28
-    Top = 110
-    Width = 843
+    Left = 92
+    Height = 23
+    Top = 87
+    Width = 678
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 8
-    BorderSpacing.Right = 8
+    BorderSpacing.Left = 5
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 6
     TabOrder = 6
   end
   object DocNameLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = DocNameEdit
     AnchorSideTop.Side = asrCenter
-    Left = 8
-    Height = 20
-    Top = 114
-    Width = 105
-    BorderSpacing.Left = 8
+    Left = 6
+    Height = 15
+    Top = 91
+    Width = 81
+    BorderSpacing.Left = 6
     Caption = 'наименование'
     ParentColor = False
   end
@@ -275,36 +274,36 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 119
-    Height = 28
-    Top = 146
-    Width = 843
+    Left = 92
+    Height = 23
+    Top = 116
+    Width = 678
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Top = 8
-    BorderSpacing.Right = 8
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 6
     TabOrder = 7
   end
   object NoteLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = NoteEdit
     AnchorSideTop.Side = asrCenter
-    Left = 8
-    Height = 20
-    Top = 150
-    Width = 88
-    BorderSpacing.Left = 8
+    Left = 6
+    Height = 15
+    Top = 120
+    Width = 69
+    BorderSpacing.Left = 6
     Caption = 'примечание'
     ParentColor = False
   end
   object DocumentLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
-    Left = 8
-    Height = 20
-    Top = 10
-    Width = 77
-    BorderSpacing.Left = 8
-    BorderSpacing.Top = 10
+    Left = 6
+    Height = 15
+    Top = 8
+    Width = 60
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 8
     Caption = 'Документ:'
     Font.Style = [fsBold]
     ParentColor = False
@@ -314,12 +313,12 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = NoteEdit
     AnchorSideTop.Side = asrBottom
-    Left = 8
-    Height = 20
-    Top = 194
-    Width = 43
-    BorderSpacing.Left = 8
-    BorderSpacing.Top = 20
+    Left = 6
+    Height = 15
+    Top = 155
+    Width = 34
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 16
     Caption = 'Файл:'
     Font.Style = [fsBold]
     ParentColor = False
@@ -329,12 +328,12 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = FileLabel
     AnchorSideTop.Side = asrBottom
-    Left = 8
-    Height = 24
-    Top = 222
-    Width = 225
-    BorderSpacing.Left = 8
-    BorderSpacing.Top = 8
+    Left = 6
+    Height = 19
+    Top = 176
+    Width = 179
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
     Caption = 'Не заменять файл документа'
     TabOrder = 8
     OnChange = NotChangeFileCheckBoxChange
@@ -344,14 +343,14 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Control = NotChangeFileCheckBox
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = OpenButton
-    Left = 8
-    Height = 28
-    Top = 254
-    Width = 908
+    Left = 6
+    Height = 23
+    Top = 201
+    Width = 727
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 8
-    BorderSpacing.Top = 8
-    BorderSpacing.Right = 6
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 5
     ParentFont = False
     ReadOnly = True
     TabOrder = 9
@@ -363,16 +362,16 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = FileNameEdit
     AnchorSideBottom.Side = asrBottom
-    Left = 922
-    Height = 36
-    Top = 250
-    Width = 40
+    Left = 738
+    Height = 29
+    Top = 198
+    Width = 32
     Align = alCustom
     Anchors = [akTop, akRight]
     AutoSize = True
-    BorderSpacing.Right = 8
-    Constraints.MinHeight = 36
-    Constraints.MinWidth = 40
+    BorderSpacing.Right = 6
+    Constraints.MinHeight = 29
+    Constraints.MinWidth = 32
     Images = Images.PX24
     ImageIndex = 12
     OnClick = OpenButtonClick
