--- a/forms/udocumenteditform.lfm
+++ b/forms/udocumenteditform.lfm
@@ -1,11 +1,12 @@
 object DocumentEditForm: TDocumentEditForm
   Left = 513
-  Height = 289
+  Height = 405
   Top = 250
-  Width = 776
+  Width = 970
   Caption = 'Редактирование документа'
-  ClientHeight = 289
-  ClientWidth = 776
+  ClientHeight = 405
+  ClientWidth = 970
+  DesignTimePPI = 120
   OnCreate = FormCreate
   OnShow = FormShow
   LCLVersion = '3.2.0.0'
@@ -13,19 +14,19 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Control = OpenButton
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 41
-    Top = 243
-    Width = 772
+    Height = 73
+    Top = 326
+    Width = 966
     Align = alBottom
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Left = 2
-    BorderSpacing.Top = 16
+    BorderSpacing.Top = 20
     BorderSpacing.Right = 2
-    BorderSpacing.Bottom = 5
+    BorderSpacing.Bottom = 6
     BevelOuter = bvNone
-    ClientHeight = 41
-    ClientWidth = 772
+    ClientHeight = 73
+    ClientWidth = 966
     TabOrder = 0
     object CancelButton: TSpeedButton
       AnchorSideTop.Control = ButtonPanelBevel
@@ -33,13 +34,13 @@ object DocumentEditForm: TDocumentEditForm
       AnchorSideRight.Control = ButtonPanel
       AnchorSideRight.Side = asrBottom
       Cursor = crHandPoint
-      Left = 668
+      Left = 845
       Height = 34
-      Top = 6
-      Width = 99
+      Top = 8
+      Width = 115
       Anchors = [akTop, akRight]
       AutoSize = True
-      BorderSpacing.Right = 5
+      BorderSpacing.Right = 6
       Caption = ' Отменить '
       Images = Images.PX24
       ImageIndex = 7
@@ -53,10 +54,10 @@ object DocumentEditForm: TDocumentEditForm
       AnchorSideTop.Side = asrCenter
       AnchorSideRight.Control = CancelButton
       Cursor = crHandPoint
-      Left = 564
+      Left = 724
       Height = 34
-      Top = 6
-      Width = 104
+      Top = 8
+      Width = 121
       Anchors = [akTop, akRight]
       AutoSize = True
       Caption = ' Сохранить '
@@ -69,9 +70,9 @@ object DocumentEditForm: TDocumentEditForm
     end
     object ButtonPanelBevel: TBevel
       Left = 0
-      Height = 6
+      Height = 8
       Top = 0
-      Width = 772
+      Width = 966
       Align = alTop
       Shape = bsTopLine
     end
@@ -80,11 +81,11 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = DocTypeComboBox
     AnchorSideTop.Side = asrCenter
-    Left = 6
-    Height = 15
-    Top = 33
-    Width = 19
-    BorderSpacing.Left = 6
+    Left = 8
+    Height = 20
+    Top = 42
+    Width = 24
+    BorderSpacing.Left = 8
     Caption = 'тип'
     ParentColor = False
   end
@@ -95,17 +96,17 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 92
-    Height = 23
-    Top = 29
-    Width = 678
+    Left = 119
+    Height = 28
+    Top = 38
+    Width = 843
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 5
-    BorderSpacing.Top = 6
-    BorderSpacing.Right = 6
-    Constraints.MinWidth = 150
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 8
+    Constraints.MinWidth = 188
     DropDownCount = 20
-    ItemHeight = 15
+    ItemHeight = 20
     Style = csDropDownList
     TabOrder = 1
   end
@@ -114,23 +115,23 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocTypeComboBox
     AnchorSideTop.Side = asrBottom
-    Left = 92
-    Height = 23
-    Top = 58
-    Width = 120
-    BorderSpacing.Left = 5
-    BorderSpacing.Top = 6
+    Left = 119
+    Height = 28
+    Top = 74
+    Width = 150
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 8
     TabOrder = 2
   end
   object DocNumLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 6
-    Height = 15
-    Top = 62
-    Width = 66
-    BorderSpacing.Left = 6
+    Left = 8
+    Height = 20
+    Top = 78
+    Width = 85
+    BorderSpacing.Left = 8
     Caption = 'номер – год'
     ParentColor = False
   end
@@ -139,11 +140,11 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 217
-    Height = 15
-    Top = 62
-    Width = 6
-    BorderSpacing.Left = 5
+    Left = 275
+    Height = 20
+    Top = 78
+    Width = 8
+    BorderSpacing.Left = 6
     Caption = '–'
     ParentColor = False
   end
@@ -152,12 +153,12 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocTypeComboBox
     AnchorSideTop.Side = asrBottom
-    Left = 228
-    Height = 23
-    Top = 58
-    Width = 80
-    BorderSpacing.Left = 5
-    BorderSpacing.Top = 6
+    Left = 289
+    Height = 28
+    Top = 74
+    Width = 100
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 8
     TabOrder = 3
   end
   object DocDateLabel: TLabel
@@ -165,11 +166,11 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 324
-    Height = 15
-    Top = 62
-    Width = 137
-    BorderSpacing.Left = 16
+    Left = 409
+    Height = 20
+    Top = 78
+    Width = 179
+    BorderSpacing.Left = 20
     Caption = 'дата введения в действие'
     ParentColor = False
   end
@@ -179,17 +180,17 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Side = asrBottom
-    Left = 466
-    Height = 23
-    Top = 58
-    Width = 79
+    Left = 594
+    Height = 28
+    Top = 74
+    Width = 100
     CenturyFrom = 1941
     MaxDate = 401768
     MinDate = -53780
     ParentFont = False
     TabOrder = 4
-    BorderSpacing.Left = 5
-    BorderSpacing.Top = 3
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 4
     TrailingSeparator = False
     TextForNullDate = 'NULL'
     LeadingZeros = True
@@ -210,11 +211,11 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = DocNumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 561
-    Height = 15
-    Top = 62
-    Width = 34
-    BorderSpacing.Left = 16
+    Left = 714
+    Height = 20
+    Top = 78
+    Width = 41
+    BorderSpacing.Left = 20
     Caption = 'статус'
     ParentColor = False
   end
@@ -225,17 +226,17 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 600
-    Height = 23
-    Top = 58
-    Width = 170
+    Left = 761
+    Height = 28
+    Top = 74
+    Width = 201
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 5
-    BorderSpacing.Top = 6
-    BorderSpacing.Right = 6
-    Constraints.MinWidth = 150
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 8
+    Constraints.MinWidth = 188
     DropDownCount = 20
-    ItemHeight = 15
+    ItemHeight = 20
     Style = csDropDownList
     TabOrder = 5
   end
@@ -246,25 +247,25 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 92
-    Height = 23
-    Top = 87
-    Width = 678
+    Left = 119
+    Height = 28
+    Top = 110
+    Width = 843
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 5
-    BorderSpacing.Top = 6
-    BorderSpacing.Right = 6
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 8
     TabOrder = 6
   end
   object DocNameLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = DocNameEdit
     AnchorSideTop.Side = asrCenter
-    Left = 6
-    Height = 15
-    Top = 91
-    Width = 81
-    BorderSpacing.Left = 6
+    Left = 8
+    Height = 20
+    Top = 114
+    Width = 105
+    BorderSpacing.Left = 8
     Caption = 'наименование'
     ParentColor = False
   end
@@ -274,36 +275,36 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 92
-    Height = 23
-    Top = 116
-    Width = 678
+    Left = 119
+    Height = 28
+    Top = 146
+    Width = 843
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Top = 6
-    BorderSpacing.Right = 6
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 8
     TabOrder = 7
   end
   object NoteLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = NoteEdit
     AnchorSideTop.Side = asrCenter
-    Left = 6
-    Height = 15
-    Top = 120
-    Width = 69
-    BorderSpacing.Left = 6
+    Left = 8
+    Height = 20
+    Top = 150
+    Width = 88
+    BorderSpacing.Left = 8
     Caption = 'примечание'
     ParentColor = False
   end
   object DocumentLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
-    Left = 6
-    Height = 15
-    Top = 8
-    Width = 60
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 8
+    Left = 8
+    Height = 20
+    Top = 10
+    Width = 77
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 10
     Caption = 'Документ:'
     Font.Style = [fsBold]
     ParentColor = False
@@ -311,14 +312,14 @@ object DocumentEditForm: TDocumentEditForm
   end
   object FileLabel: TLabel
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = NoteEdit
+    AnchorSideTop.Control = ControlDatePicker
     AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 15
-    Top = 155
-    Width = 34
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 16
+    Left = 8
+    Height = 20
+    Top = 214
+    Width = 43
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 6
     Caption = 'Файл:'
     Font.Style = [fsBold]
     ParentColor = False
@@ -328,12 +329,12 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = FileLabel
     AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 19
-    Top = 176
-    Width = 179
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
+    Left = 8
+    Height = 24
+    Top = 242
+    Width = 225
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 8
     Caption = 'Не заменять файл документа'
     TabOrder = 8
     OnChange = NotChangeFileCheckBoxChange
@@ -343,14 +344,14 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideTop.Control = NotChangeFileCheckBox
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = OpenButton
-    Left = 6
-    Height = 23
-    Top = 201
-    Width = 727
+    Left = 8
+    Height = 28
+    Top = 274
+    Width = 908
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    BorderSpacing.Right = 5
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 6
     ParentFont = False
     ReadOnly = True
     TabOrder = 9
@@ -362,18 +363,69 @@ object DocumentEditForm: TDocumentEditForm
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = FileNameEdit
     AnchorSideBottom.Side = asrBottom
-    Left = 738
-    Height = 29
-    Top = 198
-    Width = 32
+    Left = 922
+    Height = 36
+    Top = 270
+    Width = 40
     Align = alCustom
     Anchors = [akTop, akRight]
     AutoSize = True
-    BorderSpacing.Right = 6
-    Constraints.MinHeight = 29
-    Constraints.MinWidth = 32
+    BorderSpacing.Right = 8
+    Constraints.MinHeight = 36
+    Constraints.MinWidth = 40
     Images = Images.PX24
     ImageIndex = 12
     OnClick = OpenButtonClick
+  end
+  object ControlDatePicker: TDateTimePicker
+    AnchorSideLeft.Control = DocDateLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = NoteEdit
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 862
+    Height = 28
+    Top = 180
+    Width = 100
+    CenturyFrom = 1941
+    MaxDate = 401768
+    MinDate = -53780
+    ParentFont = False
+    TabOrder = 10
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 8
+    TrailingSeparator = False
+    TextForNullDate = 'NULL'
+    LeadingZeros = True
+    Anchors = [akTop, akRight]
+    NullInputAllowed = False
+    Kind = dtkDate
+    TimeFormat = tf24
+    TimeDisplay = tdHMS
+    DateMode = dmComboBox
+    Date = 42334
+    Time = 0.476538217590132
+    UseDefaultSeparators = True
+    AutoButtonSize = True
+    HideDateTimeParts = []
+    MonthNames = 'Long'
+  end
+  object ControlDateLabel: TLabel
+    AnchorSideLeft.Control = DocDatePicker
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = ControlDatePicker
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Control = ControlDatePicker
+    Left = 727
+    Height = 20
+    Top = 184
+    Width = 129
+    Anchors = [akTop, akRight]
+    BorderSpacing.Left = 20
+    BorderSpacing.Right = 6
+    Caption = 'дата актуализации'
+    ParentColor = False
   end
 end
